[gd_scene load_steps=7 format=2]

[ext_resource path="res://fontlar/youngserif-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resimler/giris_buton_basili.webp" type="Texture" id=2]
[ext_resource path="res://resimler/giris_buton_normal.webp" type="Texture" id=3]
[ext_resource path="res://resimler/popup_arkaplan_genel.webp" type="Texture" id=4]
[ext_resource path="res://sceneler/tali_sahneler/yaratik_savasi_sonrasi.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Main" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -250.0
margin_right = 150.0
margin_bottom = 250.0
popup_exclusive = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -250.0
margin_right = 175.0
margin_bottom = 250.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.5
margin_top = 22.0
margin_right = 160.5
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Which Power Would You Like to Boost?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 101.0
margin_right = -20.0
margin_bottom = -13.0

[node name="Warfare" type="TextureButton" parent="TextureRect/VBoxContainer"]
margin_right = 310.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/Warfare"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.5
margin_top = -15.0
margin_right = 160.5
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "Warfare Power"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Calamity" type="TextureButton" parent="TextureRect/VBoxContainer"]
margin_top = 65.0
margin_right = 310.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/Calamity"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.5
margin_top = -15.0
margin_right = 160.5
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "Calamity Power"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chaos" type="TextureButton" parent="TextureRect/VBoxContainer"]
margin_top = 130.0
margin_right = 310.0
margin_bottom = 191.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/Chaos"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.5
margin_top = -15.0
margin_right = 160.5
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "Chaos Power"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fortune" type="TextureButton" parent="TextureRect/VBoxContainer"]
margin_top = 195.0
margin_right = 310.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/Fortune"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.5
margin_top = -15.0
margin_right = 160.5
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "Fortune Power"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Divine" type="TextureButton" parent="TextureRect/VBoxContainer"]
margin_top = 260.0
margin_right = 310.0
margin_bottom = 321.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/Divine"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.5
margin_top = -15.0
margin_right = 160.5
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "Divine Power"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Renaissance" type="TextureButton" parent="TextureRect/VBoxContainer"]
margin_top = 325.0
margin_right = 310.0
margin_bottom = 386.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/Renaissance"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.5
margin_top = -15.0
margin_right = 160.5
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "Renaissance Power"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="popup_hide" from="." to="." method="_on_Main_popup_hide"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Warfare" to="." method="_on_Warfare_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Calamity" to="." method="_on_Calamity_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Chaos" to="." method="_on_Chaos_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Fortune" to="." method="_on_Fortune_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Divine" to="." method="_on_Divine_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Renaissance" to="." method="_on_Renaissance_pressed"]
